--- a/src/DevHabits.Api/Properties/launchSettings.json
+++ b/src/DevHabits.Api/Properties/launchSettings.json
@@ -1,23 +1,23 @@
 ﻿{
   "$schema": "https://json.schemastore.org/launchsettings.json",
   "profiles": {
-    "http": {
+    "DevHabits.Api": {
+      "applicationUrl": "https://localhost:5002;http://localhost:5001",
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:5227",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "launchBrowser": false
     },
-    "https": {
+    "http": {
+      "applicationUrl": "http://localhost:5001",
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:7243;http://localhost:5227",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "launchBrowser": false
     }
   }
 }
