--- a/src/DevHabits.Api/Properties/launchSettings.json
+++ b/src/DevHabits.Api/Properties/launchSettings.json
@@ -1,23 +1,31 @@
-﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+{
   "profiles": {
     "DevHabits.Api": {
-      "applicationUrl": "https://localhost:5002;http://localhost:5001",
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "launchBrowser": false
+      "applicationUrl": "https://localhost:5002;http://localhost:5001",
+      "dotnetRunMessages": true
     },
     "http": {
-      "applicationUrl": "http://localhost:5001",
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "launchBrowser": false
+      "applicationUrl": "http://localhost:5001",
+      "dotnetRunMessages": true
+    },
+    "Container (Dockerfile)": {
+      "commandName": "Docker",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "environmentVariables": {
+        "ASPNETCORE_HTTPS_PORTS": "8081",
+        "ASPNETCORE_HTTP_PORTS": "8080"
+      },
+      "publishAllPorts": true,
+      "useSSL": true
     }
-  }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
