Added Docker Compose

--- a/src/DevHabits.Api/DevHabits.Api.csproj
+++ b/src/DevHabits.Api/DevHabits.Api.csproj
@@ -4,6 +4,7 @@
 	  <UserSecretsId>f180aa10-198f-463d-a929-89d4f789885b</UserSecretsId>
 	  <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
 	  <DockerfileContext>..\..</DockerfileContext>
+	  <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
 	</PropertyGroup>
 
 	<ItemGroup>
