--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,13 @@ services:
     build:
       context: .
       dockerfile: src/DevHabits.Api/Dockerfile
+    ports:
+      - 5000:8080
+      - 5001:8081
+    # environment:
+    # Seq
+    # - OTEL_EXPORTER_OTLP_ENDPOINT=http://devhabit.seq:5341/ingest/otlp
+    # - OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
+    # Aspire Dashboard
+    # - OTEL_EXPORTER_OTLP_ENDPOINT=http://devhabit.aspire-dashboard:18889
+    # - OTEL_EXPORTER_OTLP_PROTOCOL=grpc
